--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 
-.left-bar {
+.home-left-bar {
   height: 100vh;
   width: 20%;
   background-color: #909AD0;
@@ -15,14 +15,14 @@
   justify-content: flex-start;
 }
 
-.left-bar h1 {
+.home-left-bar h1 {
   font-family: Roboto;
   font-size: 30px;
   font-weight: 700;
   color: #fff;
 }
 
-.left-bar span {
+.logout {
   margin-top: 50px;
   font-family: Roboto;
   font-size: 36px;
@@ -36,14 +36,14 @@
   color: #d9d9d9;
 }
 
-.input-group {
+.home-input-group {
   display: flex;
   flex-direction: column;
   row-gap: 30px;
   width: 80%;
 }
 
-.input-group input {
+.home-input-group input {
   font-family: Roboto;
   width: 100%;
   height: 60px;
@@ -53,7 +53,7 @@
   font-size: 20px;
 }
 
-.right-bar {
+.home-right-bar {
   height: 100vh;
   width: 70%;
   display: flex;
