--- a/web/src/pages/Login/styles.css
+++ b/web/src/pages/Login/styles.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 
-.left-bar {
+.login-left-bar {
   height: 100vh;
   width: 30%;
   background-color: #909AD0;
@@ -15,14 +15,14 @@
   justify-content: center;
 }
 
-.left-bar h1 {
+.login-left-bar h1 {
   font-family: Roboto;
   font-size: 96px;
   font-weight: 700;
   color: #fff;
 }
 
-.left-bar span {
+.login-left-bar span {
   font-family: Roboto;
   font-size: 36px;
   width: 60%;
@@ -32,7 +32,7 @@
   color: #d9d9d9;
 }
 
-.left-bar button {
+.login-left-bar button {
   width: 70%;
   height: 10%;
   border-radius: 50px;
@@ -45,11 +45,11 @@
   transition: background-color 0.2s;
 }
 
-.left-bar button:hover {
+.login-left-bar button:hover {
   background-color: rgba(234,234,234,0.3);
 }
 
-.right-bar {
+.login-right-bar {
   height: 100vh;
   width: 70%;
   display: flex;
@@ -59,28 +59,28 @@
   justify-content: center;
 }
 
-.right-bar h1 {
+.login-right-bar h1 {
   font-family: Roboto;
   font-size: 96px;
   font-weight: 700;
   color: #909AD0;
 }
 
-.right-bar form {
+.login-right-bar form {
   display: flex;
   flex-direction: column;
   row-gap: 100px;
   align-items: center;
 }
 
-.input-group {
+.login-input-group {
   display: flex;
   flex-direction: column;
   row-gap: 30px;
   width: 550px;
 }
 
-.right-bar form button {
+.login-right-bar form button {
   width: 40%;
   height: 60px;
   border-radius: 50px;
@@ -92,11 +92,11 @@
   transition: opacity 0.2s;
 }
 
-.right-bar form button:hover {
+.login-right-bar form button:hover {
   opacity: 80%;
 }
 
-.input-group input {
+.login-input-group input {
   font-family: Roboto;
   width: 100%;
   height: 70px;
